# EmbeddedSystems_Class_tasks

./: .gitignore  README.md
EmbeddedSystemsLab/: .gitignore
EmbeddedSystemsLab/FurutaPendulum/: MainPendulum.lf  PendulumController.lf  Plot.py  Print.lf
fed-gen/FederatedCount/src/: c.lf  p.lf
fed-gen/Federated_Airplane/src/: C.lf  D.lf  V.lf
fed-gen/WaitingLine/src/: A.lf  H.lf  S1.lf  S2.lf  S3.lf  S4.lf  SM.lf
fed-gen/Waiting_Line/src/: A.lf  H.lf  S1.lf  S2.lf  SM.lf
src-gen/2023_03_10/CountTestC/: CMakeLists.txt  CountTestC.c
src-gen/2023_03_17/Lab3/: Lab3.c
src-gen/2023_03_24/MainPendulum/: MainPendulum.c
src-gen/2023_04_07/Main/: CMakeLists.txt  CompileDefinitions.txt  Main.c
src-gen/CountC/: CMakeLists.txt  CountC.c
src-gen/CountPy/: CountPy.c  CountPy.py  setup.py
src-gen/CountTestC/: CountTestC.c
src-gen/CountTestPy/: CountTestPy.c  CountTestPy.py  setup.py
src-gen/Final Project/Main/: CMakeLists.txt  CompileDefinitions.txt  Main.c
src-gen/HelloWorldPy/: CMakeLists.txt  CompileDefinitions.txt  HelloWorldPy.c  HelloWorldPy.py  setup.py
src-gen/Lab3/: CMakeLists.txt  Lab3.c
src-gen/Test/: CMakeLists.txt  Test.c
src-gen/test/: CMakeLists.txt  test.c
src/2023_03_03/: HelloWorldPy.lf
src/2023_03_10/: CountC.lf  CountPy.lf  CountTestC.lf  CountTestPy.lf
src/2023_03_17/: Lab3.lf
src/2023_03_24/FurutaPendulum/: MainPendulum.lf  PendulumController.lf  PendulumSimulation.lf  Print.lf  (+1 more)
src/2023_04_07/: Main.lf
src/2023_04_21/: FederatedCount.lf  Federated_Airplane.lf
src/Etc/: Test.lf
src/Final Project/: WaitingLine.lf
(+64 files in other folders)
